Header alignment fixed

--- a/src/components/Home/HeaderNav/HeaderNav.css
+++ b/src/components/Home/HeaderNav/HeaderNav.css
@@ -1,5 +1,6 @@
 .navbar {
   z-index: 10;
   display: grid;
-  justify-content: center;
+  grid-template-columns: auto auto;
+  justify-content: space-between;
 }
